// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/space/demo/align.vue correctly 1`] = `
<div class="space-align-container">
  <div class="space-align-block">
    <div class="bmant-space ant-space-horizontal ant-space-align-center">
      <div class="bmant-space-item" style="margin-right: 8px;"> center </div>
      <!---->
      <div class="bmant-space-item" style="margin-right: 8px;"><button class="bmant-btn ant-btn-primary" type="button">
          <!----><span>Primary</span>
        </button></div>
      <!---->
      <div class="bmant-space-item"><span class="mock-block">Block</span></div>
      <!---->
    </div>
  </div>
  <div class="space-align-block">
    <div class="bmant-space ant-space-horizontal ant-space-align-start">
      <div class="bmant-space-item" style="margin-right: 8px;"> start </div>
      <!---->
      <div class="bmant-space-item" style="margin-right: 8px;"><button class="bmant-btn ant-btn-primary" type="button">
          <!----><span>Primary</span>
        </button></div>
      <!---->
      <div class="bmant-space-item"><span class="mock-block">Block</span></div>
      <!---->
    </div>
  </div>
  <div class="space-align-block">
    <div class="bmant-space ant-space-horizontal ant-space-align-end">
      <div class="bmant-space-item" style="margin-right: 8px;"> end </div>
      <!---->
      <div class="bmant-space-item" style="margin-right: 8px;"><button class="bmant-btn ant-btn-primary" type="button">
          <!----><span>Primary</span>
        </button></div>
      <!---->
      <div class="bmant-space-item"><span class="mock-block">Block</span></div>
      <!---->
    </div>
  </div>
  <div class="space-align-block">
    <div class="bmant-space ant-space-horizontal ant-space-align-baseline">
      <div class="bmant-space-item" style="margin-right: 8px;"> baseline </div>
      <!---->
      <div class="bmant-space-item" style="margin-right: 8px;"><button class="bmant-btn ant-btn-primary" type="button">
          <!----><span>Primary</span>
        </button></div>
      <!---->
      <div class="bmant-space-item"><span class="mock-block">Block</span></div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`renders ./components/space/demo/base.vue correctly 1`] = `
<div class="bmant-space ant-space-horizontal ant-space-align-center">
  <div class="bmant-space-item" style="margin-right: 8px;"> Space </div>
  <!---->
  <div class="bmant-space-item" style="margin-right: 8px;"><button class="bmant-btn ant-btn-primary" type="button">
      <!----><span>Button</span>
    </button></div>
  <!---->
  <div class="bmant-space-item" style="margin-right: 8px;"><span><div class="bmant-upload ant-upload-select ant-upload-select-text"><span tabindex="0" class="bmant-upload" role="button"><input type="file" style="display: none;" accept="" capture="false"><button class="bmant-btn" type="button"><!----><span role="img" aria-label="upload" class="anticon anticon-upload"><svg focusable="false" class="" data-icon="upload" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M400 317.7h73.9V656c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V317.7H624c6.7 0 10.4-7.7 6.3-12.9L518.3 163a8 8 0 00-12.6 0l-112 141.7c-4.1 5.3-.4 13 6.3 13zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z"></path></svg></span><span>Click to Upload</span></button></span></div>
  <div class="bmant-upload-list ant-upload-list-text"></div></span>
</div>
<!---->
<div class="bmant-space-item">
  <!----><button class="bmant-btn" type="button">
    <!----><span>Confirm</span>
  </button>
</div>
<!---->
</div>
`;

exports[`renders ./components/space/demo/customize.vue correctly 1`] = `
<div>
  <div tabindex="-1" class="bmant-slider">
    <div class="bmant-slider-rail"></div>
    <div class="bmant-slider-track" style="left: 0%; width: 8%;"></div>
    <div class="bmant-slider-step"></div>
    <!---->
    <div class="bmant-slider-handle" style="left: 8%; transform: translateX(-50%);" role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="100" aria-valuenow="8" aria-disabled="false"></div>
    <div class="bmant-slider-mark"></div>
  </div><br><br>
  <div class="bmant-space ant-space-horizontal ant-space-align-center">
    <div class="bmant-space-item" style="margin-right: 8px;"><button class="bmant-btn ant-btn-primary" type="button">
        <!----><span>Primary</span>
      </button></div>
    <!---->
    <div class="bmant-space-item" style="margin-right: 8px;"><button class="bmant-btn" type="button">
        <!----><span>Default</span>
      </button></div>
    <!---->
    <div class="bmant-space-item" style="margin-right: 8px;"><button class="bmant-btn ant-btn-dashed" type="button">
        <!----><span>Dashed</span>
      </button></div>
    <!---->
    <div class="bmant-space-item"><button class="bmant-btn ant-btn-link" type="button">
        <!----><span>Link</span>
      </button></div>
    <!---->
  </div>
</div>
`;

exports[`renders ./components/space/demo/size.vue correctly 1`] = `
<div>
  <div class="bmant-radio-group ant-radio-group-outline"><label class="bmant-radio-wrapper ant-radio-wrapper-checked"><span class="bmant-radio ant-radio-checked"><input type="radio" class="bmant-radio-input" value="small"><span class="bmant-radio-inner"></span></span><span>Small</span></label><label class="bmant-radio-wrapper"><span class="bmant-radio"><input type="radio" class="bmant-radio-input" value="middle"><span class="bmant-radio-inner"></span></span><span>Middle</span></label><label class="bmant-radio-wrapper"><span class="bmant-radio"><input type="radio" class="bmant-radio-input" value="large"><span class="bmant-radio-inner"></span></span><span>Large</span></label></div><br><br>
  <div class="bmant-space ant-space-horizontal ant-space-align-center">
    <div class="bmant-space-item" style="margin-right: 8px;"><button class="bmant-btn ant-btn-primary" type="button">
        <!----><span>Primary</span>
      </button></div>
    <!---->
    <div class="bmant-space-item" style="margin-right: 8px;"><button class="bmant-btn" type="button">
        <!----><span>Default</span>
      </button></div>
    <!---->
    <div class="bmant-space-item" style="margin-right: 8px;"><button class="bmant-btn ant-btn-dashed" type="button">
        <!----><span>Dashed</span>
      </button></div>
    <!---->
    <div class="bmant-space-item"><button class="bmant-btn ant-btn-link" type="button">
        <!----><span>Link</span>
      </button></div>
    <!---->
  </div>
</div>
`;

exports[`renders ./components/space/demo/vertical.vue correctly 1`] = `
<div class="bmant-space ant-space-vertical">
  <div class="bmant-space-item" style="margin-bottom: 8px;">
    <div class="bmant-card ant-card-bordered" style="width: 300px;">
      <div class="bmant-card-head">
        <div class="bmant-card-head-wrapper">
          <div class="bmant-card-head-title">Card</div>
          <!---->
        </div>
        <!---->
      </div>
      <!---->
      <div class="bmant-card-body">
        <p>Card content</p>
        <p>Card content</p>
      </div>
      <!---->
    </div>
  </div>
  <!---->
  <div class="bmant-space-item">
    <div class="bmant-card ant-card-bordered" style="width: 300px;">
      <div class="bmant-card-head">
        <div class="bmant-card-head-wrapper">
          <div class="bmant-card-head-title">Card</div>
          <!---->
        </div>
        <!---->
      </div>
      <!---->
      <div class="bmant-card-body">
        <p>Card content</p>
        <p>Card content</p>
      </div>
      <!---->
    </div>
  </div>
  <!---->
</div>
`;
